# cmake-gtest-canonical-ci

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake-gtest-canonical-ci/: Calculator.cpp  Calculator.hpp  Calculator.test.cpp
